# LINUX_C_PRJ_TEMPLATE

./: CMakeLists.txt  LICENSE  README.md  build.sh
src/app/: CMakeLists.txt  main.c  main.h
src/modules/submodule_a/: CMakeLists.txt  submodule_a.c  submodule_a.h
src/modules/submodule_b/: CMakeLists.txt  submodule_b.c  submodule_b.h
toolchain/: arm-linux.cmake
